--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-slick": "^0.25.2",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1",
     "velocity-animate": "^1.5.2",
     "velocity-react": "^1.4.3"
   },
