--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^16.10.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.10.2",
+    "react-images-upload": "^1.2.7",
+    "react-notifications": "^1.4.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
